--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Three.js + Vite (Modulaire)</title>
+  <title>League.io</title>
   <link rel="stylesheet" href="/src/style.css">
 
 </head>
